added camera page

--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/MemoriesPageController.js"></script>
     <script src="js/MemoryPageController.js"></script>
+    <script src="js/AddPageController.js"></script>
   </head>
 
   <body ng-app="starter">
