--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -17,13 +17,13 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/cameraWrapper.js"></script>
     <script src="js/MemoriesPageController.js"></script>
     <script src="js/MemoryPageController.js"></script>
     <script src="js/AddPageController.js"></script>
-  </head>
+</head>
 
-  <body ng-app="starter">
+<body ng-app="starter">
     <ion-nav-view></ion-nav-view>
-  </body>
+</body>
 </html>
