added demo data to the game

--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -10,9 +10,11 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>
+    <script src="lib/lodash.min.js"></script>
 
     <!-- your app's js -->
     <script src="js/Application.js"></script>
+    <script src="js/DataService.js"></script>
     <script src="js/MemoriesPageController.js"></script>
     <script src="js/MemoryPageController.js"></script>
     <script src="js/AddPageController.js"></script>
